# k8s-ha-poc

./: Cargo.toml  Dockerfile
deploy/charts/ha-tester/: Chart.yaml  values.yaml
deploy/charts/ha-tester/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
src/: main.rs
